--- a/db_compose/docker-compose.yml
+++ b/db_compose/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+
+  minio-spva:
+    restart: always
+    image: quay.io/minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=victor
+      - MINIO_ROOT_PASSWORD=senha1234567
+      - MINIO_STORAGE_USE_HTTPS=false
+    command: server /data --console-address ":9001"
+    volumes:
+      - ./minio_data:/data
+
   mysql-spva:
     image: mysql:8.0
     container_name: mysql-spva
